Footer Fully Responsived, Padded Uniformly, Text Size Adjusted, and White Space Corrected

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 
 .active{
     color: #ffffff;
-    background-color: #2B7FFF
+    background-color: #2B7FFF;
 }
